# Soroban-Playground

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.sandbox  README.md  SEP-0055.md  ai-context.md  llms.txt
.claude/: settings.local.json
docs/: astro.config.mjs  package-lock.json
docs/src/components/: DocsSidebar.astro  DocsSidebarSublist.astro  DocsTableOfContents.astro
docs/src/content/docs/: ai.md  build-test-audit.md  deploy.md  explore.md  getting-started.md  index.mdx  share-and-import.md  troubleshooting.md  wallets-and-networks.md  workspaces.md
docs/src/content/docs/academy/: agentic-ai-mcp.md  ai-assisted-contract-development.md  hello-world-build-test-deploy.md  index.md
docs/src/content/docs/reference/: http-api.md
docs/src/styles/: soropg.css
frontend/: index.html  llms.txt  main.js  style.css
frontend/img/academy-icons/: academy-icons-master.xcf
frontend/js/: academy.js  app-init.js  build-test.js  console-utils.js  editor-init.js  explore.js  main.js  network-settings.js  state.js  wallet-deploy.js  workspaces.js
frontend/pages/: academy.html  ai.html  build.html  create.html  deploy.html  explore.html  settings.html  test.html
frontend/style/: academy.css  ai.css  deploy.css  settings.css  style.css  workspace.css
frontend/templates/: Cargo.toml  lib.rs  test.rs
mcp/: .npmignore  README.md  package-lock.json  package.json  skill.md  tsconfig.json
mcp/src/: config.ts  ideClient.ts  index.ts
mcp/src/utils/: patch.ts
mcp/test/: ideClient.test.ts  patch.test.ts
src/: docker.rs  main.rs  models.rs  semaphore.rs
src/routes/: ai.rs  compile.rs  friendbot.rs  interface.rs  mcp.rs  mod.rs  scout_audit.rs  test.rs
src/templates/: Cargo.toml.template  lib.rs.template
