[package]
name = "Soroban-Playground"
version = "0.7.1"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sha2 = "0.10"
hex = "0.4"
once_cell = "1.18"
tokio-stream = "0.1"
bytes = "1"
futures-util = "0.3"
regex = "1"
base64 = "0.21"
