[package]
name = "project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "23.0.2"
sep-41-token = "1.2.0"
soroban-fixed-point-math = "1.3.0"
blend-contract-sdk = "2.22.0"
stellar-tokens = "0.4.1"
stellar-access = "0.4.1"
stellar-contract-utils = "0.4.1"
stellar-macros = "0.4.1"


[dev-dependencies]
soroban-sdk = { version = "23.0.2", features = ["testutils"] }
sep-41-token = { version = "1.2.0", features = ["testutils"] }
soroban-fixed-point-math = { version = "1.3.0" }
blend-contract-sdk = { version = "2.22.0", features = ["testutils"] }
stellar-tokens = "0.4.1"
stellar-access = "0.4.1"
stellar-contract-utils = "0.4.1"
stellar-macros = "0.4.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true