[package]
name = "project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "26.1.0"
sep-41-token = "1.4.0"
soroban-fixed-point-math = "1.5.0"
blend-contract-sdk = "2.25.0"
stellar-tokens = "0.7.2"
stellar-access = "0.7.2"
stellar-contract-utils = "0.7.2"
stellar-macros = "0.7.2"
stellar-accounts = "0.7.2"
stellar-fee-abstraction = "0.7.2"
stellar-governance = "0.7.2"

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
sep-41-token = { version = "1.4.0", features = ["testutils"] }
soroban-fixed-point-math = { version = "1.5.0" }
blend-contract-sdk = { version = "2.25.0", features = ["testutils"] }
stellar-tokens = "0.7.2"
stellar-access = "0.7.2"
stellar-contract-utils = "0.7.2"
stellar-macros = "0.7.2"
stellar-accounts = "0.7.2"
stellar-fee-abstraction = "0.7.2"
stellar-governance = "0.7.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
